[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/more fonts/KiriFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Pause.gd" type="Script" id=2]
[ext_resource path="res://PauseControls.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 47
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.0313726, 0.0313726, 0.52549 )

[node name="CenterContainer" type="CenterContainer" parent="BackGround"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/CenterContainer"]
margin_left = 522.0
margin_top = 44.0
margin_right = 918.0
margin_bottom = 756.0
custom_constants/separation = 41

[node name="Label" type="Label" parent="BackGround/CenterContainer/VBoxContainer"]
margin_right = 396.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "Pause"
align = 1

[node name="Control" type="Control" parent="BackGround/CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 396.0
margin_bottom = 82.0

[node name="Resume" type="Button" parent="BackGround/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 123.0
margin_right = 396.0
margin_bottom = 208.0
rect_min_size = Vector2( 0, 85 )
custom_fonts/font = SubResource( 3 )
text = "Resume"

[node name="About Game" type="Button" parent="BackGround/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 249.0
margin_right = 396.0
margin_bottom = 334.0
rect_min_size = Vector2( 0, 85 )
custom_fonts/font = SubResource( 3 )
text = "About Game"

[node name="Restart" type="Button" parent="BackGround/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 375.0
margin_right = 396.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 85 )
custom_fonts/font = SubResource( 3 )
text = "Restart"

[node name="Main menu" type="Button" parent="BackGround/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 501.0
margin_right = 396.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 85 )
custom_fonts/font = SubResource( 3 )
text = "Main menu"

[node name="Quit" type="Button" parent="BackGround/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 627.0
margin_right = 396.0
margin_bottom = 712.0
rect_min_size = Vector2( 0, 85 )
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Control" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="BackGround/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="BackGround/CenterContainer/VBoxContainer/About Game" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="BackGround/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="BackGround/CenterContainer/VBoxContainer/Main menu" to="." method="_on_Main_menu_pressed"]
[connection signal="pressed" from="BackGround/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="Go_back" from="Control" to="." method="_on_Control_Go_back"]
